# TextSummarizationNLP

./: LICENSE  README.md  main.py  pyproject.toml  setup_renamed.py  template.py
config/: config.yaml
research/: TextSummarizationExperiments.ipynb  data_ingestion.ipynb  trials.ipynb
src/TextSummarizer/components/: data_ingestion.py
src/TextSummarizer/config/: configuration.py
src/TextSummarizer/logging/: __init__.py
src/TextSummarizer/pipeline/: stage_01_data_ingestion.py
src/TextSummarizer/utils/: common.py
